# Sentinel

./: .gitignore  APP_FLOW.md  CLAUDE.md  MANUAL_STEPS.md  PRD.md  README.md  SUBMISSION.md  TESTING_SCENARIOS.md  test-sim.sh
.claude/commands/: debug.md  deploy-api.md  deploy-frontend.md  move-test.md  run-prompt.md  simulate.md  strategy.md
.github/workflows/: deploy.yml  e2e.yml  test-sentinel.yml  test.yml
action/: README.md  action.yml
api/: Cargo.toml  Dockerfile  boogie.bpl  run.sh
api/migrations/: 001_initial.sql  002_teams.sql
api/src/: config.rs  error.rs  main.rs
api/src/auth/: api_key.rs  middleware.rs  mod.rs
api/src/cache/: keys.rs  mod.rs  pool.rs  rate_limit.rs  simulation.rs
api/src/db/: api_keys.rs  mod.rs  pool.rs  projects.rs  prover_runs.rs  simulations.rs  users.rs
api/src/gas/: analyzer.rs  mod.rs  parser.rs  suggestions.rs  timeline.rs  types.rs
api/src/prover/: executor.rs  mod.rs  types.rs
api/src/routes/: api_keys.rs  batch.rs  gas.rs  health.rs  mod.rs  prover.rs  simulate.rs  trace.rs
api/src/simulation/: executor.rs  mod.rs  types.rs
api/src/trace/: executor.rs  mod.rs  types.rs
docs/: DEPLOYMENT.md
frontend/: eslint.config.mjs  middleware.ts  package-lock.json  package.json  sentry.client.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: auth-provider.tsx  header.tsx  privy-login-section.tsx  providers.tsx  send-transaction.tsx  (+6 more)
move/: Move.toml
prompts/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  README.md
scripts/: migrate.sh  setup-dev.sh
(+134 files in other folders)
